added more reposnsive styling

--- a/style.css
+++ b/style.css
@@ -1,19 +1,46 @@
+
+:root {
+	--paragraph-font: "Comfortaa", cursive;
+	--heading-font: Verdana, Geneva, Tahoma, sans-serif;
+	--background-color_1: #003366;
+	--background-color_2: #0066cc;
+	--paragrapgh-color: #f2f2f2;
+}
 body {
-	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #f2f2f2;
-	color: #333;
 }
-
+p{
+	font-family: var(--paragraph-font);
+}
+h1 {
+	font-family: var(--heading-font);
+	color: var(--paragrapgh-color);
+	margin-right:35px;
+}
+h2{
+	font-family: var(--heading-font);
+	text-align:center;
+	border-bottom:5px solid rgb(43, 40, 40);
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+}
 header {
+	margin: 0;
+	padding:0;
+}
+p{
+	display: block;
+	font-size: 20px;
+}
+/* header {
 	background-color: #003366;
 	color: #fff;
 	padding: 20px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-}
+} */
 
 .logo img {
 	max-height: 200px;
@@ -21,7 +48,7 @@ header {
 }
 
 nav {
-	background-color: #0066cc;
+	background-color: var(--background-color_1);
 	padding: 10px;
 	text-align: center;
 }
@@ -60,23 +87,45 @@ footer {
 	padding: 20px;
 	text-align: center;
 }
+h2.contact_us{
+	font-family: var(--heading-font);
+	text-align:center;
+	border-bottom:5px solid var(--paragrapgh-color);
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;	
+}
 
-.contact {
+.contact_us {
 	margin-bottom: 20px;
 }
+
+
+#about{
+	margin-top: 250px;
+}
+
+img, video {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+  .contact_us a {
+	color: #fff;
+	text-decoration: underline;
+}
+
 @media (max-width: 768px) {
     /* Styles for screens smaller than 768px (e.g., tablets and smartphones) */
     .gallery img {
       width: 100%;
       height: auto;
     }
+	
+	h1{
+		font-size:10px;
+	}
+	#about{
+		margin-top:400px;
+	}
   }
-  img, video {
-    max-width: 100%;
-    height: auto;
-    object-fit: contain;
-  }
-  .contact a {
-	color: #fff;
-	text-decoration: underline;
-}
+  
